# karton-yara-matcher

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/: __init__.py  __main__.py  __version__.py  yara_matcher.py
